--- a/src/assets/styles/docs.sass
+++ b/src/assets/styles/docs.sass
@@ -3,12 +3,38 @@
 	display: flex
 
 .docs__sidebar
-	padding-left: 1.5rem
-	height: 100%
-	padding-top: 2rem
-	max-width: 300px
+	margin-right: 1.5rem
+	max-width: 200px
 	width: 100%
-	background-color: #F5F7F9
 
 .docs__content
-	width: 70%
+
+// sidebar
+.dsidebar__section
+	margin-bottom: 1.5rem
+
+.dsidebar__title, .dsidebar__items, .dsidebar__item
+	display: flex
+
+.dsidebar__title
+	cursor: pointer
+	font-weight: 700
+	margin-bottom: 0.5rem
+
+.dsidebar__items
+	flex-direction: column
+	margin-left: .257rem
+
+.dsidebar__item
+	margin-bottom: 0.5rem
+	cursor: pointer
+	text-decoration: none
+	color: $black
+
+.dsidebar__item.active--exact
+	background-color: $primary_color
+	color: $white
+	padding: .25rem .5rem
+	border-radius: .2rem
+	font-weight: 600
+	margin-left: -.257rem
