Create separate section around docs__content

--- a/src/assets/styles/docs.sass
+++ b/src/assets/styles/docs.sass
@@ -8,6 +8,11 @@
 	width: 100%
 
 .docs__content
+	width: 100%
+	background-color: $white
+	border-radius: .25rem
+	padding: 2rem 2rem 1rem
+	border: 1px solid #dddddd
 
 // sidebar
 .dsidebar__section
