docs frontmatter (title + description)

--- a/src/assets/styles/docs.sass
+++ b/src/assets/styles/docs.sass
@@ -43,3 +43,10 @@
 	border-radius: .2rem
 	font-weight: 600
 	margin-left: -.257rem
+
+// content
+.docs__meta
+	margin-bottom: 1rem
+
+.docs__meta-heading
+	font-size: 2rem
