--- a/src/assets/styles/base.sass
+++ b/src/assets/styles/base.sass
@@ -8,3 +8,7 @@ body
 	height: 100%
 	font-size: 16px
 	-webkit-font-smoothing: antialiased
+
+@font-face
+	font-family: Cascadia Mono
+	src: url(../fonts/CascadiaMono.ttf)
