--- a/src/assets/styles/base.sass
+++ b/src/assets/styles/base.sass
@@ -8,6 +8,7 @@ body
 	height: 100%
 	font-size: 16px
 	-webkit-font-smoothing: antialiased
+	background-color: rgba($primary_color, .1)
 
 @font-face
 	font-family: Cascadia Mono
