--- a/src/assets/styles/base.sass
+++ b/src/assets/styles/base.sass
@@ -1,9 +1,12 @@
+@import url("https://fonts.googleapis.com/css?family=Kulim+Park:300,400,600,700&display=swap")
+
 *
 	margin: 0
 	padding: 0
 	box-sizing: border-box
 
 body
+	font-family: $body_font
 	width: 100%
 	height: 100%
 	font-size: 16px
@@ -11,5 +14,5 @@ body
 	background-color: rgba($primary_color, .1)
 
 @font-face
-	font-family: Cascadia Mono
+	font-family: $code_font
 	src: url(../fonts/CascadiaMono.ttf)
