--- a/src/assets/styles/variables.sass
+++ b/src/assets/styles/variables.sass
@@ -4,3 +4,7 @@ $white: #ffffff
 // colors
 $primary_color: #484D7C
 $secondary_color: #A78FAD
+
+// font
+$body_font: "Kulim Park", sans-serif
+$code_font: "Cascadia Mono"
