--- a/src/assets/styles/markdown.sass
+++ b/src/assets/styles/markdown.sass
@@ -52,20 +52,23 @@
 		border-left: .25rem solid #5d5e65
 		font-size: 1.1rem
 
-	code
-		border-radius: .3rem
-		color: #405a74
-		padding: .25rem .5rem
-		background-color: rgba(#5d5e65, .1)
-		line-height: 1.5
-		direction: ltr
-		text-align: left
-		white-space: pre-wrap
-		word-spacing: normal
-		word-break: normal
-		-moz-tab-size: 2
-		-o-tab-size: 2
-		tab-size: 2
-		-webkit-hyphens: none
-		-ms-hyphens: none
-		hyphens: none
+	table
+		margin-bottom: 1rem
+		width: 100%
+		overflow-x: scroll
+
+		thead tr th
+			border-bottom: 1px solid #dddddd
+			padding: .5rem 1rem .5rem 0
+			font-weight: 400
+			color: #a7a7a7
+
+		tbody
+			color: #4d4d4d
+			font-weight: 500
+
+			tr td
+				padding: .5rem 1rem .5rem 0
+
+		th
+			text-align: left
