--- a/src/assets/styles/base.sass
+++ b/src/assets/styles/base.sass
@@ -1,10 +1,18 @@
+@import url("https://fonts.googleapis.com/css?family=Kulim+Park:300,400,600,700&display=swap")
+
 *
 	margin: 0
 	padding: 0
 	box-sizing: border-box
 
 body
+	font-family: $body_font
 	width: 100%
 	height: 100%
 	font-size: 16px
 	-webkit-font-smoothing: antialiased
+	background-color: rgba($primary_color, .1)
+
+@font-face
+	font-family: $code_font
+	src: url(../fonts/CascadiaMono.ttf)
