Move styles to src directory

--- a/src/styles/variable.sass
+++ b/src/styles/variable.sass
@@ -6,5 +6,5 @@ $primary_color: #484D7C
 $secondary_color: #A78FAD
 
 // font
-$body_font: "Kulim Park", sans-serif
-$code_font: "Cascadia Mono"
+$font-family-base: 'Inter', sans-serif
+$font-family-mono: "Cascadia Mono"
