--- a/src/styles/code.sass
+++ b/src/styles/code.sass
@@ -21,5 +21,5 @@
 		-ms-hyphens: none
 		hyphens: none
 
-	pre, p code, p code
-		font-family: $code_font
+	pre, code, p code
+		font-family: $font-family-mono
