--- a/src/styles/docs.sass
+++ b/src/styles/docs.sass
@@ -4,14 +4,14 @@
 
 .docs__sidebar
 	margin-right: 1.5rem
-	width: 200px
+	width: 18%
 	max-width: 100%
 
 .docs__content
 	max-width: 100%
-	width: 75%
+	width: 82%
 	background-color: $white
-	border-radius: .25rem
+	border-radius: .5rem
 	padding: 2rem 2rem 1rem
 	border: 1px solid #dddddd
 
@@ -24,8 +24,8 @@
 
 .dsidebar__title
 	font-size: .875rem
-	font-weight: 600
-	color: rgba(0, 0, 0, 0.3)
+	font-weight: 500
+	color: rgba(0, 0, 0, 0.5)
 	margin-bottom: 0.5rem
 
 .dsidebar__list
@@ -33,24 +33,27 @@
 	margin-left: .257rem
 
 .dsidebar__item
-	margin-bottom: 0.5rem
+	margin-bottom: .125rem
 	cursor: pointer
 	text-decoration: none
 	color: $black
 	user-select: none
+	padding: .375rem .5rem
+	margin-left: -.257rem
+
+	&:last-child
+		margin-bottom: 0
 
 .dsidebar__item.active--exact
 	background-color: $primary_color
 	color: $white
-	padding: .25rem .5rem
 	border-radius: .2rem
-	font-weight: 600
-	margin-left: -.257rem
+	font-weight: 700
 
 // content
 .docs__meta
 	display: flex
-	margin-bottom: 1rem
+	margin-bottom: 1.5rem
 	align-items: center
 
 .docs__meta-method
