Rename primary_color to brand-color sass variable

--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -20,7 +20,7 @@
 	display: flex
 
 .navbar__item
-	color: $primary_color
+	color: $brand-color
 	font-weight: 500
 	margin-right: 0.875rem
 	cursor: pointer
