--- a/src/styles/markdown.sass
+++ b/src/styles/markdown.sass
@@ -22,12 +22,12 @@
 			word-wrap: break-word
 
 	a
-		color: $primary_color
+		color: $brand-color
 		font-weight: 500
 		text-decoration: underline
 
 		&:hover
-			color: darken($primary_color, 5%)
+			color: darken($brand-color, 5%)
 
 	hr
 		margin-top: 4rem
