--- a/src/styles/docs.sass
+++ b/src/styles/docs.sass
@@ -45,7 +45,7 @@
 		margin-bottom: 0
 
 .dsidebar__item.active--exact
-	background-color: $primary_color
+	background-color: $brand-color
 	color: $white
 	border-radius: .2rem
 	font-weight: 700
