--- a/src/styles/variable.sass
+++ b/src/styles/variable.sass
@@ -2,8 +2,8 @@ $black: #000000
 $white: #ffffff
 
 // colors
-$primary_color: #484D7C
 $secondary_color: #A78FAD
+$brand-color: #484D7C
 
 // font
 $font-family-base: 'Inter', sans-serif
