Update Button component
Update the styles of Button component according to new LogChimp styles.

--- a/src/styles/variable.sass
+++ b/src/styles/variable.sass
@@ -5,6 +5,9 @@ $white: #ffffff
 $secondary_color: #A78FAD
 $brand-color: #484D7C
 
+// radius
+$border-radius: 0.375rem
+
 // font
 $font-family-base: 'Inter', sans-serif
 $font-family-mono: "Cascadia Mono"
