--- a/src/styles/button.sass
+++ b/src/styles/button.sass
@@ -1,10 +1,23 @@
 .button
-	padding: .625rem 1rem
-	font-weight: 600
-	border-radius: .25rem
-	user-select: none
+	position: relative
+	padding: .875rem 1.5rem
+	border-radius: $border-radius
+	font-weight: 500
+	display: flex
+	justify-content: center
 	cursor: pointer
+	user-select: none
 
 .button__primary
-	background-color: $primary_color
+	background-color: $brand-color
 	color: $white
+
+.button__outline
+	border: 1px solid rgba($white, .5)
+
+	&:hover
+		border-color: $white
+
+.button__primary-disabled
+	opacity: .7
+	cursor: default
