Move Docs.sass to layouts directory

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -8,7 +8,9 @@
 
 @import "button"
 @import "header"
-@import "docs"
+
+// layouts
+@import "layouts/Docs"
 
 // components
 @import "components/DocsSidebar"
