--- a/src/styles/code.sass
+++ b/src/styles/code.sass
@@ -1,12 +1,13 @@
 .markdown
 	pre
-		padding: 1rem
+		padding: 1.25rem
 		margin-bottom: 1rem
 		overflow-x: scroll
+		width: 100%
 
 	pre, p code
-		border: 1px solid #dddddd
-		border-radius: .5rem
+		border: 1px solid $gray-90
+		border-radius: $border-radius
 
 	p code
 		padding: .2rem .5rem
