--- a/src/styles/markdown.sass
+++ b/src/styles/markdown.sass
@@ -1,17 +1,22 @@
 .markdown
 	h1, h2, h3, h4, h5, h6
 		margin-top: 1.5rem
-		font-weight: 500
+		font-weight: 400
 
-	h1, h2, h3, h4, h5, h6, ol, ul, p
-		margin-bottom: .5rem
+	h1, h2, h3, h4, h5, h6
+		margin-bottom: 0.625rem
+
+	ol, ul, p, blockquote, table
+		margin-bottom: 1rem
 
 	ol, ul, p
-		color: #5d5e65
 		line-height: 1.7
+		font-weight: 400
 
 	p
 		margin-bottom: 1.125rem
+
+	p, li
 		word-wrap: break-word
 
 	ol, ul
@@ -19,7 +24,6 @@
 
 		li
 			margin-bottom: .25rem
-			word-wrap: break-word
 
 	a
 		color: $brand-color
@@ -32,43 +36,33 @@
 	hr
 		margin-top: 4rem
 		margin-bottom: 4rem
-		border:
-			width: 1px
-			color: rgba(#5d5e65, .2)
+		border: 1px solid $gray-90
 
 	p img
 		display: flex
-
-	img
 		margin: 0 auto 1.5rem
 		max-width: 100%
-		padding: 5px
-		border: 1px solid #eeeeee
-		box-shadow: 1px 1px 5px rgba(0, 0, 0, .1)
 
 	blockquote
-		margin: 0 0 2rem
-		padding: 0 1.5rem
-		border-left: .25rem solid #5d5e65
-		font-size: 1.1rem
+		padding: 0.375rem 1.25rem
+		border-left: .25rem solid $gray-90
+		font-size: 1.125rem
+
+		p
+			margin-bottom: 0
 
 	table
-		margin-bottom: 1rem
 		width: 100%
 		overflow-x: scroll
 
 		thead tr th
-			border-bottom: 1px solid #dddddd
+			border-bottom: 1px solid $gray-90
 			padding: .5rem 1rem .5rem 0
 			font-weight: 400
-			color: #a7a7a7
+			color: $gray-60
 
-		tbody
-			color: #4d4d4d
-			font-weight: 500
-
-			tr td
-				padding: .5rem 1rem .5rem 0
+		tbody tr td
+			padding: .5rem 1rem .5rem 0
 
 		th
 			text-align: left
