--- a/src/styles/base.sass
+++ b/src/styles/base.sass
@@ -6,6 +6,7 @@
 body
 	font-family: $font-family-base
 	font-size: 16px
+	color: $text
 	-webkit-font-smoothing: antialiased
 	-moz-osx-font-smoothing: grayscale
 
