Import logchimp logo svg file & fix header styles

--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -1,20 +1,12 @@
-.header
-	margin-top: 1rem
-	margin-bottom: 2rem
+header
+	padding: 1rem 0
 
-.header__wrapper
-	display: flex
-	align-items: center
-
-.header__navbar, .navbar
+.header__wrapper, .header__navbar, .navbar, .header__logo
 	display: flex
 	align-items: center
 
 .header__logo
-	width: 100%
-	max-width: 120px
 	margin-right: 1.5rem
-	cursor: pointer
 
 .navbar__list
 	display: flex
