strong font weight and remove margin bottom from last p tag

--- a/src/styles/markdown.sass
+++ b/src/styles/markdown.sass
@@ -16,6 +16,12 @@
 	p
 		margin-bottom: 1.125rem
 
+		&:last-child
+			margin-bottom: 0
+
+	strong
+		font-weight: 600
+
 	p, li
 		word-wrap: break-word
 
