--- a/src/styles/base.sass
+++ b/src/styles/base.sass
@@ -13,3 +13,17 @@ body
 @font-face
 	font-family: $font-family-mono
 	src: url(../assets/fonts/CascadiaMono.ttf)
+
+hr
+	box-sizing: content-box
+	height: 0
+	overflow: visible
+
+hr
+	display: block
+	margin: 2.5em 0
+	padding: 0
+	height: 1px
+	border: 0
+	border-top: 1px solid $gray-90
+
