--- a/src/styles/base.sass
+++ b/src/styles/base.sass
@@ -14,6 +14,10 @@ body
 	font-family: $font-family-mono
 	src: url(../assets/fonts/CascadiaMono.ttf)
 
+a
+	color: $brand-color
+	text-decoration: none
+
 hr
 	box-sizing: content-box
 	height: 0
