Use ".inner" class for header and docs template

--- a/src/styles/container.sass
+++ b/src/styles/container.sass
@@ -5,18 +5,22 @@
 	margin-right: auto
 	margin-left: auto
 
-@media (min-width: 576px)
+@media screen and (min-width: 576px)
 	.container
 		max-width: 540px
 
-@media (min-width: 768px)
+@media screen and (min-width: 768px)
 	.container
 		max-width: 720px
 
-@media (min-width: 992px)
+@media screen and (min-width: 992px)
 	.container
 		max-width: 960px
 
-@media (min-width: 1200px)
+@media screen and (min-width: 1200px)
 	.container
 		max-width: 1140px
+
+@media screen and (max-width:  1400px)
+	.container
+		max-width: 1372px
