--- a/src/styles/variable.sass
+++ b/src/styles/variable.sass
@@ -9,6 +9,12 @@ $text: #1A1A1A
 $gray-60: #999999
 $gray-70: #B3B3B3
 $gray-90: #E5E5E5
+$gray-95: #F2F2F2
+$gray-97: #F7F7F7
+
+$color-success: #579672
+$color-warning: #E8BD43
+$color-danger: #DE544E
 
 // radius
 $border-radius: 0.375rem
@@ -16,3 +22,4 @@ $border-radius: 0.375rem
 // font
 $font-family-base: 'Inter', sans-serif
 $font-family-mono: "Cascadia Mono"
+
