show type as heading (with color) in blockquote component

--- a/src/styles/blockquote.sass
+++ b/src/styles/blockquote.sass
@@ -1,14 +1,16 @@
 .blockquote
 	margin-bottom: 1.25rem
-	padding: .1rem 1.5rem
+	padding: 1rem 1.5rem
 	border-left-width: .5rem
 	border-left-style: solid
 	background-color: $gray-97
 	border-radius: $border-radius
 
-.blockquote-content
-	margin-top: 1rem
-	margin-bottom: 1rem
+	.blockquote-type
+		font-weight: 600
+		font-size: 0.95rem
+		text-transform: uppercase
+		margin-bottom: 0.5rem
 
 .blockquote-tip
 	border-color: $color-success
