--- a/src/styles/components/SelfhostInstall.sass
+++ b/src/styles/components/SelfhostInstall.sass
@@ -9,18 +9,18 @@
 .product
 	border: 1px solid $gray-90
 	border-radius: $border-radius
-	padding: 1rem 1.5rem
+	padding: 2rem 1rem
 	text-decoration: none
 	text-align: center
 
 	h3
-		margin-top: 1rem
-		margin-bottom: 0.5rem
+		margin-top: 0.25rem
+		margin-bottom: 0.25rem
 		color: $text
 
 	p
-		font-size: 0.875rem
-		color: $gray-60
+		color: $gray-70
+		font-weight: 400
 		margin-bottom: 0
 
 	img
