--- a/src/styles/base.sass
+++ b/src/styles/base.sass
@@ -37,3 +37,19 @@ hr
 	margin: 0 auto
 	max-width: 1372px
 	width: 100%
+
+.logo
+	display: flex
+	align-items: center
+
+	img
+		max-width: 2rem
+		max-height: 2rem
+		width: 100%
+		height: 100%
+
+	h6
+		margin-left: 0.5rem
+		font-size: 1.25rem
+		font-weight: 500
+		color: $brand-color
