add gray-40 & gray-50 color variable

--- a/src/styles/variable.sass
+++ b/src/styles/variable.sass
@@ -6,6 +6,8 @@ $brand-color: #484D7C
 
 $text: #1A1A1A
 
+$gray-40: #666666
+$gray-50: #808080
 $gray-60: #999999
 $gray-70: #B3B3B3
 $gray-90: #E5E5E5
