--- a/src/styles/variable.sass
+++ b/src/styles/variable.sass
@@ -10,6 +10,7 @@ $gray-40: #666666
 $gray-50: #808080
 $gray-60: #999999
 $gray-70: #B3B3B3
+$gray-80: #CCCCCC
 $gray-90: #E5E5E5
 $gray-95: #F2F2F2
 $gray-97: #F7F7F7
