--- a/src/styles/pages/partners.sass
+++ b/src/styles/pages/partners.sass
@@ -1,24 +1,15 @@
-.partners
-	margin-top: 3rem
-
-.partners-header
-	margin-bottom: 1rem
-
-	h3
-		margin-bottom: 1rem
-
-	p
-		color: $gray-60
-
 .partners-list
-	display: flex
-	flex-wrap: wrap
-	justify-content: center
+	display: grid
+	grid-gap: 2rem
+
+@media screen and (min-width: 768px)
+	.partners-list
+		grid-template-columns: repeat(2, minmax(16rem, auto))
 
 .partners-list-item
-	flex: 1 0 300px
-	margin: 20px
 	text-align: center
+	margin: 0 auto
+	max-width: 300px
 
 	a
 		display: inline-block
@@ -30,7 +21,5 @@
 		height: 30px
 
 	p
-		margin: 0 auto
 		color: $gray-60
-		max-width: 300px
 		font-size: 0.875rem
