--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -1,30 +1,20 @@
-header
+.header
 	padding: 1rem 0
 	margin-bottom: 1.5rem
 
-.header__wrapper, .header__navbar, .navbar, .header__logo
+.header-wrapper, .header-navbar
 	display: flex
 	align-items: center
 
-.header__logo
-	margin-right: 1.5rem
+.header-navbar
+	margin-left: auto
 
-.navbar__list
-	display: flex
-
-.navbar__item
-	color: $brand-color
+.navbar-item
+	color: $text
 	font-weight: 500
-	margin-right: 0.875rem
+	margin-right: 1rem
 	cursor: pointer
 	text-decoration: none
 
 	&:last-child
 		margin-right: 0
-
-.header__action
-	margin-left: auto
-
-@media (max-width: 768px)
-	.navbar
-		display: none
