add sponsorStrap component to footer

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -20,6 +20,7 @@
 // components
 @import "components/DocsSidebar"
 @import "components/SelfhostInstall"
+@import "components/sponsorStrap"
 
 // pages
 @import "pages/home"
