Split styles for "hompage-section" in index page

--- a/src/styles/pages/home.sass
+++ b/src/styles/pages/home.sass
@@ -1,3 +1,7 @@
+.homepage-section
+	margin-top: 8rem
+	margin-bottom: 1rem
+
 .homepage-hero
 	h1
 		font-size: 2.5rem
@@ -18,8 +22,6 @@
 
 // features
 .homepage-features
-	margin-top: 8rem
-	margin-bottom: 1rem
 	display: grid
 	gap: 2rem
 	grid-template-columns: repeat(1, 1fr)
