create CheckItem component

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -18,6 +18,7 @@
 @import "templates/docs"
 
 // components
+@import "components/checkItem"
 @import "components/DocsSidebar"
 @import "components/SelfhostInstall"
 @import "components/sponsorStrap"
