--- a/src/styles/pages/open-source.sass
+++ b/src/styles/pages/open-source.sass
@@ -1,6 +1,6 @@
 .open-source-item
 	display: flex
-	margin-bottom: 1.5rem
+	margin-bottom: 1.875rem
 	flex-direction: column
 
 	&:last-child
@@ -15,11 +15,16 @@
 		flex-direction: row
 		align-items: center
 
+		&:nth-child(2n + 1)
+			img
+				margin-right: 1rem
+
 		&:nth-child(2n)
 			flex-direction: row-reverse
 
-		img
-			width: 50%
+		img, .open-source-item-content
+			max-width: 50%
+			flex: 0 0 50%
 
 .open-source-item-content
 	flex-grow: 3
