Add "The open source advantage" section in homepage

--- a/src/styles/pages/home.sass
+++ b/src/styles/pages/home.sass
@@ -2,6 +2,11 @@
 	margin-top: 8rem
 	margin-bottom: 1rem
 
+.homepage-block
+	background-color: $gray-97
+	padding-top: 5rem
+	padding-bottom: 5rem
+
 .homepage-hero
 	h1
 		font-size: 2.5rem
