replace icon with icon components
* add patreon and open collective icon

--- a/src/styles/footer.sass
+++ b/src/styles/footer.sass
@@ -40,6 +40,11 @@ footer
 		&:not(:last-child)
 			margin-right: 2rem
 
+	svg
+		width: 1.5rem
+		height: 1.125rem
+		fill: #B1B2B4
+
 @media screen and (min-width: 768px)
 	.footer-container
 		grid-template-columns: repeat(3, minmax(calc(15rem), auto))
