--- a/src/styles/components/checkItem.sass
+++ b/src/styles/components/checkItem.sass
@@ -5,13 +5,14 @@
 .check-list-item
 	display: flex
 	align-items: center
-	margin-bottom: 0.375rem
+	margin-bottom: 0.5rem
 
 	&:last-child
 		margin-bottom: 0
 
 	svg
 		margin-right: 1rem
-		stroke: #4ac2c4
-		width: 1.25rem
-		height: 1.25rem
+		stroke: #0a9f6e
+		stroke-width: 3
+		width: 1.5rem
+		height: 1.5rem
