show stripe checkout success message

--- a/src/styles/pages/valet.sass
+++ b/src/styles/pages/valet.sass
@@ -32,10 +32,18 @@
 		font-weight: 600
 		padding-right: 0.25rem
 
-
 	.plan-price-duration
 		color: $gray-50
 		font-size: 1.15rem
 
 .plan-button
 	margin-top: 1.5rem
+
+.valet-success
+	margin-bottom: 2rem
+	background-color: #e0ece0
+	border-radius: 0.625rem
+	border: 1px solid green
+	color: green
+	font-weight: 500
+	padding: 1rem
