adjust checkout plan name, price & value styling

--- a/src/styles/pages/valet.sass
+++ b/src/styles/pages/valet.sass
@@ -20,17 +20,18 @@
 	text-transform: uppercase
 	font-size: 0.9rem
 	font-weight: 500
-	margin-bottom: 0.625rem
+	margin-bottom: 1.5rem
 
 .plan-price
 	display: flex
 	justify-content: center
-	align-items: center
+	align-items: flex-end
+	margin-bottom: 1rem
 
 	.plan-price-value
 		font-size: 3rem
 		font-weight: 600
-		padding-right: 0.25rem
+		line-height: 2.8rem
 
 	.plan-price-duration
 		color: $gray-50
