--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -22,6 +22,7 @@
 @import "components/DocsSidebar"
 @import "components/SelfhostInstall"
 @import "components/sponsorStrap"
+@import "components/valetStrap"
 
 // pages
 @import "pages/home"
@@ -31,3 +32,4 @@
 @import "pages/team"
 @import "pages/use-case"
 @import "pages/compare"
+@import "pages/valet"
