Add Get started page (#81)
* Add get started button to header & homepage

* Create get started page

* Create download page

* Add meta data to Get started page

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -27,6 +27,7 @@
 // pages
 @import "pages/home"
 @import "pages/features"
+@import "pages/getStarted"
 @import "pages/partners"
 @import "pages/open-source"
 @import "pages/team"
