remove duplicate .check-list-item styles

--- a/src/styles/pages/getStarted.sass
+++ b/src/styles/pages/getStarted.sass
@@ -12,9 +12,9 @@
 		margin-top: 0.875rem
 		margin-bottom: 0.5rem
 
-	p
-		color: $gray-60
-		margin-bottom: 1rem
+.get-started-label
+	color: $gray-60
+	margin-bottom: 1rem
 
 
 .card
@@ -22,20 +22,3 @@
 	border: 1px solid $gray-90
 	text-align: center
 	padding: 3rem
-
-.check-list
-	margin-top: 2rem
-
-.check-list-item
-	display: flex
-	align-content: center
-	margin-bottom: 0.375rem
-
-	&:last-child
-		margin-bottom: 0
-
-	svg
-		margin-right: 1rem
-		stroke: #4ac2c4
-		width: 1.25rem
-		height: 1.25rem
