--- a/src/styles/fonts/CascadiaMono.sass
+++ b/src/styles/fonts/CascadiaMono.sass
@@ -3,4 +3,4 @@
 	font-style: normal
 	font-weight: 400
 	font-display: swap
-	src: url('@/assets/fonts/CascadiaMono.ttf') format('truetype')
+	src: url('./CascadiaMono.ttf') format('truetype')
