use woff2 font format & rename to CascadiaCode

--- a/src/styles/variable.sass
+++ b/src/styles/variable.sass
@@ -24,4 +24,4 @@ $border-radius: 0.375rem
 
 // font
 $font-family-base: 'Inter', sans-serif
-$font-family-mono: 'Cascadia Mono', 'Inter', sans-serif
+$font-family-mono: 'CascadiaCode', 'Inter', sans-serif
