--- a/src/styles/base.sass
+++ b/src/styles/base.sass
@@ -10,6 +10,13 @@ body
 	-webkit-font-smoothing: antialiased
 	-moz-osx-font-smoothing: grayscale
 
+@font-face
+	font-family: 'CascadiaCode'
+	font-style: normal
+	font-weight: 400
+	font-display: swap
+	src: url('../assets/fonts/CascadiaCode.woff2') format('woff2')
+
 a
 	color: $brand-color
 	text-decoration: none
