increase partners logo height

--- a/src/styles/pages/partners.sass
+++ b/src/styles/pages/partners.sass
@@ -12,13 +12,15 @@
 	max-width: 300px
 
 	a
-		display: inline-block
-		margin-bottom: 5px
+		display: flex
+		justify-content: center
+		align-items: center
+		margin-bottom: 10px
 
 	img
 		max-width: 100%
 		width: auto
-		height: 30px
+		max-height: 60px
 
 	p
 		color: $gray-60
