--- a/src/styles/pages/partners.sass
+++ b/src/styles/pages/partners.sass
@@ -1,4 +1,5 @@
 .partners-list
+	--lc-logo-size: 60px
 	display: grid
 	grid-gap: 2rem
 
@@ -16,11 +17,12 @@
 		justify-content: center
 		align-items: center
 		margin-bottom: 10px
+		height: var(--lc-logo-size)
 
 	img
 		max-width: 100%
 		width: auto
-		max-height: 60px
+		max-height: var(--lc-logo-size)
 
 	p
 		color: $gray-60
