add beta badge to comments in feature page

--- a/src/styles/base.sass
+++ b/src/styles/base.sass
@@ -59,3 +59,12 @@ hr
 
 .small-text
 	color: $gray-50
+
+.beta-badge
+	background-color: #f04747
+	color: white
+	border-radius: 2.5rem
+	font-size: 12px
+	font-weight: 700
+	text-transform: uppercase
+	padding: 0.25rem 0.5rem
