--- a/src/styles/pages/features.sass
+++ b/src/styles/pages/features.sass
@@ -10,8 +10,13 @@
 		border-radius: $border-radius
 		margin-bottom: 0.875rem
 
-	h5
+	.features-title
+		display: inline-flex
+		align-items: center
 		margin-bottom: 0.25rem
+
+		h5
+			margin-right: 0.5rem
 
 	p
 		color: $gray-60
