Make sidebar of docs page fixed

--- a/src/styles/components/DocsSidebar.sass
+++ b/src/styles/components/DocsSidebar.sass
@@ -2,7 +2,7 @@
 	position: sticky
 	height: auto
 	scroll-behavior: smooth
-	overflow-y: auto
+	padding-top: 2rem
 
 .docs-sidebar-category-icon
 	width: 2rem
@@ -38,9 +38,6 @@
 		p
 			font-weight: 500
 			color: black
-
-.docs-sidebar-container
-	height: 100vh
 
 .docs-sidebar-section
 	margin-bottom: 1.5rem
