--- a/src/styles/templates/docs.sass
+++ b/src/styles/templates/docs.sass
@@ -3,6 +3,10 @@
 	grid-gap: 2vmin
 	grid-template-columns: calc(200px + 4vmin) 1fr calc(220px + 2vmin)
 
+.docs-content-inner
+	padding-left: 4rem
+	padding-right: 4rem
+
 .docs-header
 	margin-left: -4vmin
 	margin-right: -4vmin
@@ -48,3 +52,6 @@
 		display: none
 	.docs-header
 		position: unset
+	.docs-content-inner
+		padding-left: unset
+		padding-right: unset
