docs page should cover full width of screen

--- a/src/styles/templates/docs.sass
+++ b/src/styles/templates/docs.sass
@@ -3,6 +3,12 @@
 	grid-gap: 2vmin
 	grid-template-columns: calc(200px + 4vmin) 1fr calc(220px + 2vmin)
 
+.docs-page
+	padding-left: 4vmin
+	padding-right: 4vmin
+	margin: 0 auto
+	width: 100%
+
 .docs-content-inner
 	padding-left: 4rem
 	padding-right: 4rem
@@ -16,7 +22,7 @@
 
 .page-divider
 	border-top: 1px solid #e5e5e5
-	margin-top: -1.5rem	
+	margin-top: -1.5rem
 	margin-left: -4vmin
 	margin-right: -4vmin
 	position: sticky
