--- a/src/styles/templates/docs.sass
+++ b/src/styles/templates/docs.sass
@@ -1,7 +1,8 @@
 .docs
 	display: grid
 	grid-gap: 2vmin
-	grid-template-columns: calc(200px + 4vmin) 1fr calc(220px + 2vmin)
+	grid-template-columns: calc(200px + 4vmin) 800px calc(220px + 2vmin)
+	justify-content: space-between
 
 .docs-page
 	padding-left: 4vmin
