--- a/src/styles/templates/docs.sass
+++ b/src/styles/templates/docs.sass
@@ -1,14 +1,41 @@
 .docs
 	display: grid
 	grid-gap: 2vmin
-	grid-template-columns: calc(200px + 4vmin) 1fr calc(220px + 2vmin)
+	grid-template-columns: calc(200px + 4vmin) 800px calc(220px + 2vmin)
+	justify-content: space-between
+
+.docs-page
+	padding-left: 4vmin
+	padding-right: 4vmin
+	margin: 0 auto
+	width: 100%
+
+.docs-header
+	margin-left: -4vmin
+	margin-right: -4vmin
+	background: white
+
+.page-divider
+	border-top: 1px solid #e5e5e5
+	margin-top: -1.5rem
+	margin-left: -4vmin
+	margin-right: -4vmin
+	top: 80px
 
 .docs-links
-	position: relative
+	position: sticky
+	height: calc(100vh - 81px)
+	overflow-y: auto
+	border-right: 1px solid #e5e5e5
+	top: 81px
 
 .docs-content
 	width: 100%
 	overflow: auto
+	padding-top: 2rem
+
+.docs-footer > footer > .inner
+	padding: unset
 
 @media screen and (max-width: 1200px)
 	.docs
@@ -17,3 +44,18 @@
 @media screen and (max-width:	992px)
 	.docs
 		grid-template-columns: 1fr
+
+	.docs-links
+		display: none
+
+@media screen and (min-width:	992px)
+	.docs-header
+		position: sticky
+		top: 0
+
+	.page-divider
+		position: sticky
+
+	.docs-content-inner
+		padding-left: 4rem
+		padding-right: 4rem
