add table markdown styles

--- a/src/styles/markdown.sass
+++ b/src/styles/markdown.sass
@@ -36,3 +36,21 @@
 	strong
 		color: $text
 		font-weight: 600
+
+	table
+		display: table
+		border-collapse: collapse
+		margin-bottom: 1.5rem
+		width: 100%
+		table-layout: auto
+
+		thead tr
+			border-bottom: 1px solid $gray-80
+
+		th, td
+			text-align: left
+			padding: 0.75rem
+
+			&:first-child
+				padding-left: 0
+
